--- a/MyAndroid/res/layout/activity_main.xml
+++ b/MyAndroid/res/layout/activity_main.xml
@@ -2,15 +2,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+   
     tools:context="com.example.myandroid.MainActivity" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/title_dg"
+        >
+        <Button 
+            android:id="@+id/bt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/title_dg"
+             android:layout_marginLeft="20dp"
+            android:textColor="#FFF"
+            android:text="@string/bt1"
+            />
+        <Button 
+             android:id="@+id/bt2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/title_dg"
+            android:textColor="#FFF"
+            android:text="@string/bt2"
+            />
+         <Button 
+              android:id="@+id/bt3"
+               android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+              android:layout_marginLeft="30dp"
+               android:background="@drawable/title_dg"
+            android:textColor="#FFF"
+            android:text="@string/bt3"
+            />
+    </RelativeLayout>
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+         <ListView 
+             android:id="@+id/list_view"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             >
+             
+         </ListView>
+            
+    </RelativeLayout>
+    
 </RelativeLayout>
